--- a/aboutme.html
+++ b/aboutme.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     
-    <h1>About ME!</h1>
-    <p>Omar Flayan</p>
-    <p>A <strong> senior R&D engineer </strong> with aound <strong>10 years of experince.</strong> <br> Currently pursuing a master degree in Computer science at <strong>MIU</strong></p>
+    <h1 style="color: green">About ME!</h1>
+    <h2>Omar Flayan</h2>
+    <p>A <strong> senior R&D engineer </strong> with aound <strong>8 years of experince.</strong> <br> Currently pursuing a master degree in Computer science at <strong>MIU</strong></p>
 
-    <h2>My classesz this quarter</h2>
+    <h2>My classes this quarter</h2>
     <ul>
         <li>FPP</li>
         <li>MPP</li>
@@ -22,9 +22,20 @@
         <li>WD2</li>
     </ul>
     <h2>My favorite movie</h2>
+    <p>I actually don't watch lots of movies</p>
     <ul>
         <li>
-            Fast and furuios <a rel="stylesheet" href="https://www.imdb.com/title/tt1013752/?ref_=nv_sr_srsg_3_tt_8_nm_0_q_fast%2520and%2520furious%2520"> IMDB link</a>
+            Fast and furuios <a rel="stylesheet" href="https://www.imdb.com/title/tt1013752/?ref_=nv_sr_srsg_3_tt_8_nm_0_q_fast%2520and%2520furious%2520" class="hover"> IMDB link</a>
+            <dl>
+                <dt style="color: yellowgreen;">Director</dt>
+                <dd>Justin Lin</dd>
+                <dt style="color: yellowgreen;">Gener</dt>
+                <dd>Action/ Crime/ Thriller</dd>
+                <dt style="color: yellowgreen;">Tagline</dt>
+                <dd>New Model. Original Parts.</dd>
+                <dt style="color: yellowgreen;">Plot outline</dt>
+                <dd>Brian O'Conner, back working for the FBI in Los Angeles, teams up with Dominic Toretto to bring down a heroin importer by infiltrating his operation.</dd>
+            </dl>
         </li>
 
     </ul>
@@ -32,8 +43,8 @@
     <br>
 
     <h2>My moods</h2>
-    <p>Happy </p><img src="./img/bob.jpg" alt="happy" width="202" height="202" title="Happy">
-    <p>Sad! </p><img src="./img/coala.jpg" alt="sad" width="202" height="202" title="Sad!" >
+    <h3 style="color: green;">Happy </h3><img src="./img/bob.jpg" alt="happy" width="202" height="202" title="Happy">
+    <h3 style="color: red;">Sad! </h3><img src="./img/coala.jpg" alt="sad" width="202" height="202" title="Sad!" >
 
     <h2 class="header">
         Fun facts bout my neeighbours
@@ -42,4 +53,16 @@
 
 
 </body>
+<footer><p>
+    <a href=" https://validator.w3.org/check?url=https://omarfln.github.io/Lab2/aboutme.html">
+    <img src=”…” alt="Valid HTML!"/>
+    </a>
+    </p></footer>
 </html>
+
+
+<p>
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://omarfln.github.io/Lab2/styleme.css">
+    <img src=”http://jigsaw.w3.org/css-validator/images/vcss” alt="Valid CSS!"/>
+    </a>
+    </p>
