--- a/aboutme.html
+++ b/aboutme.html
@@ -52,17 +52,20 @@
     <p id="fun_facts_para"> Not really sure about this, still didn't get to know them well</p>
 
 
+    <footer>
+        <p>
+        <a href=" https://validator.w3.org/check?url=https://omarfln.github.io/Lab2/aboutme.html">
+        <img src=”…” alt="Valid HTML!">
+        </a>
+        </p>
+    </html>
+    
+    
+    <p>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://omarfln.github.io/Lab2/styleme.css">
+        <img src=”http://jigsaw.w3.org/css-validator/images/vcss” alt="Valid CSS!">
+        </a>
+        </p>
+    </footer>
+
 </body>
-<footer><p>
-    <a href=" https://validator.w3.org/check?url=https://omarfln.github.io/Lab2/aboutme.html">
-    <img src=”…” alt="Valid HTML!"/>
-    </a>
-    </p></footer>
-</html>
-
-
-<p>
-    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://omarfln.github.io/Lab2/styleme.css">
-    <img src=”http://jigsaw.w3.org/css-validator/images/vcss” alt="Valid CSS!"/>
-    </a>
-    </p>
